# detect_recovery

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  smart_plugin.xml
include/detect_recovery/: detect_recovery.h
include/smart_recovery/: smart_recovery.h
src/: detect_recovery.cpp  smart_recovery.cpp
